Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-98323

Assertion failure when running bluetooth/btchat example

XMLWordPrintable

    • Windows
    • adcfc156f437b766b7a922d0350d7f03da5c36bd (qt/qtconnectivity/dev) 1a2f2650d3327bd112c3fe919ab6b28bef338fbe (qt/qtconnectivity/6.2) 22658a768a6db420830eb4020232c853f88bbb02 (qt/qtconnectivity/6.2.2)

      This was reported here QTBUG-95408, but the issue also happens when using MSVC.

      It builds normal, but it crash when executing.

      10:33:24: Starting D:\ProgramData\Qt\Examples\Qt-6.2.1\bluetooth\build-btchat-Desktop_Qt_6_2_1_MSVC2019_64bit-Debug\debug\btchat.exe ...
      ASSERT failure in QList::at: "index out of range", file D:\ProgramData\Qt\6.2.1\msvc2019_64\include\QtCore/qlist.h, line 398
      10:33:44: The program has unexpectedly finished.
      10:33:44: The process was ended forcefully.
      10:33:44: D:\ProgramData\Qt\Examples\Qt-6.2.1\bluetooth\build-btchat-Desktop_Qt_6_2_1_MSVC2019_64bit-Debug\debug\btchat.exe crashed.
      

        For Gerrit Dashboard: QTBUG-98323
        # Subject Branch Project Status CR V

            ivan.solovev Ivan Solovev
            blackhack Jose Aristizabal
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes